--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -24,7 +24,7 @@
     
         </form>
     </div>
-    <script type="text/javascript" src="./event.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
