--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -15,13 +15,14 @@
                 <input type="text" name="title" required>
                 <label for="price">Precio de producto:</label> 
                 <input type="number" name="price" required>
-                <label for="image">Url de Imagen:</label>
-                <input name="image">
+                <label for="description">Descripcion</label>
+                <input name="description">
                 <button type="submit" value="Guardar">Guardar</button>
         </form>
     </div>
 
     <script type="text/javascript" src="./index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js" integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
