--- a/backend/src/public/index.html
+++ b/backend/src/public/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-    <input type="button" onclick="location.href='/views/articulos'" value="Ver articulos">
+    <input type="button" onclick="location.href='/views/articulos/handlebars'" value="Ver articulos / handlebars">
+    <input type="button" onclick="location.href='/views/articulos/pug'" value="Ver articulos / pug">
+    <input type="button" onclick="location.href='/views/articulos/ejs'" value="Ver articulos / ejs">
     <div class="main-container">
         <div class="form-container">
             <h1 class="title">Gestor de articulos</h1>
