--- a/backend/src/public/index.html
+++ b/backend/src/public/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg=="crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"
+        integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Articulos</title>
 </head>
 
@@ -51,13 +53,24 @@
                 </div>
         </div>
         </form>
+        <h1>Nombre:</h1>
+        <div>
+            <input id="user">
+        </div>
+        <h1>Mensaje:</h1>
+        <div>
+            <input id="idChat">
+        </div>
+        <div>
+            <div id="log"></div>
+        </div>
+        <!-- aca va la lista -->
+        <h1>Tabla de productos</h1>
+        <div>
+            <div id="idProductos"></div>
+        </div>
     </div>
-    <h1>Tabla de productos</h1>
-    <div>
-        <div id="idProductos"></div>
-    </div>
-    <!-- aca va la lista -->
-
+   
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
