Avances proyecto final

--- a/backend/src/public/index.html
+++ b/backend/src/public/index.html
@@ -35,6 +35,17 @@
                     <input class="form-control" type="text" name="description" id="name" placeholder="description"
                         required>
                 </div>
+                <label for="codigo">Codigo</label>
+                <div class="form-floating form-input">
+                    <input class="form-control" type="text" name="codigo" id="name" placeholder="codigo"
+                        required>
+                </div>
+                <label for="stock">Stock</label>
+                <div class="form-floating form-input">
+                    <input class="form-control" type="text" name="stock" id="name" placeholder="stock"
+                        required>
+                </div>
+
 
                 <label for="image">Imagen</label>
                 <div class="form-floating form-input">
